# pew_pew

./: .gitignore  README.md
drone_ros/: CMakeLists.txt  README.md  package.xml
drone_ros/docs/: notes.md
drone_ros/drone_ros/: Commander.py  DroneInfo.py  DroneInterfaceModel.py  quaternion_tools.py
drone_ros/launch/: effector.launch.py
drone_ros/log/: compare.csv  compare_2.csv  flight_analysis.py  flight_history.py  flight_log.csv  obstacle_avoidance_four.csv  obstacle_avoidance_three.csv  obstacle_avoidance_two.csv
drone_ros/msg/: CtlTraj.msg
drone_ros/scripts/: Drone.py  GSInputClient.py  GSService.py  client_member_function.py  drone_node.py  logger.py  service_member_function.py
mpc_ros/: CMakeLists.txt  package.xml
mpc_ros/data_analysis/: effector_info.py  flight_history.py  replay_animation.py
mpc_ros/data_analysis/data/: ascent_flight.pkl  effector.pkl  flight_test.pkl  front_directional_effector.pkl  left_wing_directional_effector.pkl  level_flight_obstacles.pkl  level_flight_pid.pkl  level_traj.pkl  obstacle_avoid.pkl  right_wing_directional_effector.pkl  test_2.pkl  uav_location.pkl  uav_location_rotated_90.pkl
mpc_ros/data_analysis/log/: Dec_19_21_06.csv  mpc_fixed_wing.csv  test_10.csv  test_11.csv  test_12.csv  test_13.csv  test_2.csv  test_3.csv  test_4.csv  test_5.csv  test_6.csv  test_7.csv  test_8.csv  test_9.csv
mpc_ros/docs/: notes.md
mpc_ros/launch/: px4.launch.py  vtol_ardupilot.launch.py
mpc_ros/mpc_ros/: Config.py  MPC.py  quaternion_tools.py
mpc_ros/mpc_ros/CasadiModels/: AirplaneModel.py  FlatQuadModel.py  SimpleQuadModel.py
mpc_ros/msg/: Telem.msg  TurtleCmd.msg
mpc_ros/scripts/: MPCTrajNode.py  drone_node.py  quad_mpc_node.py
mpc_ros/tests/: test_a.py
pew_pew/: CMakeLists.txt  package.xml
pew_pew/log/: dumpster_log.csv  (+2 more)
ros_mpc/: CMakeLists.txt  package.xml
(+27 files in other folders)
